--- a/app/src/main/res/layout/activity_search_sticker.xml
+++ b/app/src/main/res/layout/activity_search_sticker.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
@@ -11,7 +12,8 @@
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true"
         android:gravity="right"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <EditText
             android:id="@+id/searchInput"
@@ -19,14 +21,14 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Search" />
+            android:text="Search"
+            android:layout_weight="0.97" />
 
-        <Button
+        <ImageButton
             android:id="@+id/setting"
-            android:layout_width="wrap_content"
+            android:layout_width="52dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.22"
-            android:text="設定" />
+            android:src="@android:drawable/ic_menu_preferences" />
     </LinearLayout>
 
     <LinearLayout
