--- a/app/src/main/res/layout/activity_category_list.xml
+++ b/app/src/main/res/layout/activity_category_list.xml
@@ -18,18 +18,12 @@
 
         <EditText
             android:id="@+id/searchInput"
-            android:layout_width="279dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Search" />
 
-        <Button
-            android:id="@+id/setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.22"
-            android:text="編輯" />
     </LinearLayout>
 
     <LinearLayout
