--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants">
@@ -25,25 +26,6 @@
         android:text="+"
         android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/edit_category"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_alignBottom="@+id/category_name"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:text="編輯"
-        android:visibility="visible" />
-
-    <Button
-        android:id="@+id/delete_category"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_alignBottom="@+id/category_name"
-        android:layout_toLeftOf="@+id/edit_category"
-        android:text="刪除"
-        android:visibility="visible" />
-
     <TextView
         android:id="@+id/category_description"
         android:layout_width="wrap_content"
@@ -55,5 +37,14 @@
         android:layout_below="@+id/category_name"
         android:inputType="textMultiLine"
         android:textSize="20sp" />
+
+    <ImageButton
+        android:id="@+id/edit_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/category_description"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:src="@android:drawable/ic_menu_edit" />
 
 </RelativeLayout>
