--- a/app/src/main/res/layout/sticker_item.xml
+++ b/app/src/main/res/layout/sticker_item.xml
@@ -1,28 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants">
-
-    <Button
-        android:id="@+id/delete_sticker"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_above="@+id/sticker_deadline"
-        android:layout_toLeftOf="@+id/edit_sticker"
-        android:layout_toStartOf="@+id/edit_sticker"
-        android:text="刪除"
-        android:visibility="visible" />
-
-    <Button
-        android:id="@+id/edit_sticker"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_above="@+id/sticker_deadline"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:text="編輯"
-        android:visibility="visible" />
 
     <Button
         android:id="@+id/create_sticker"
@@ -143,5 +124,14 @@
             android:tag="7"
             android:textSize="45sp" />
     </TableRow>
+
+    <ImageButton
+        android:id="@+id/edit_sticker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/sticker_deadline"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:src="@android:drawable/ic_menu_edit" />
 
 </RelativeLayout>
