--- a/app/src/main/res/layout/activity_sticker.xml
+++ b/app/src/main/res/layout/activity_sticker.xml
@@ -75,8 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="TextView"
-        android:textSize="30sp"
-        android:visibility="gone" />
+        android:textSize="30sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -128,8 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Tag:"
-        android:textSize="30sp"
-        android:visibility="gone" />
+        android:textSize="30sp" />
 
     <TableRow
         android:id="@+id/stickerTagRow"
